# seoul-bike-analysis

./: .gitignore  README.md  main.py  pyproject.toml  report.html  research-plan.md
data/processed/: seg_age.csv  seg_gender.csv  seg_usertype.csv  station_month.csv
scripts/: preprocess.py
